# RT_filters

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: defs.h  dynamics.h  filters.h  mPreOpAmp.h  rms.h  shelf_filters.h  utils.h
libs/: dynamics.c  filters.c  mPreOpAmp.c  rms.c  shelf_filters.c  utils.c
tests/: CMakeLists.txt  main.c  t_util.c  t_util.h  test_dyn.c  test_filter.c  test_rms.c  test_shelf.c  tests_filter.c
